[gd_scene load_steps=2 format=2]

[ext_resource path="res://Prefabs/System/StageEngine.gd" type="Script" id=1]

[node name="Engine" type="Node"]
script = ExtResource( 1 )

[node name="BackgroundLayer" type="Node" parent="."]

[node name="EntityLayer" type="Node" parent="."]

[node name="PlayerLayer" type="Node" parent="."]

[node name="EffectLayer" type="Node" parent="."]

[node name="BulletLayer" type="Node" parent="."]
